# roccat-kone-aimo

./: .gitmodules  LICENSE  README.md  default.nix  flake.nix  shell.nix
src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  default.nix  main.c  main.c.bak  roccat_kone_aimo_hidraw
